# fas_lms_backend

./: .env  .gitignore  .pre-commit-config.yaml  .sample_env   Dockerfile  README.md  certification_todo.md  comprehensive_visualization  db.sqlite3  directory_structure.txt  docker-compose.yml  model_inspector.py  models_representation.md  new_pdr.md  newrelic.ini  pdr_todo.md  pyproject.toml  requirements.txt  uml_diagram
activity/: consumers.py  models.py  serializers.py  urls.py  views.py
app_logs/: middleware.py  urls.py  views.py
certifications/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
companies/: models.py  serializers.py
connections/: asgi.py  consumers.py  routing.py  serializers.py  views.py
controllers/: apps.py  load_balancer.py  manager.py  middleware.py  models.py  serializers.py  urls.py  views.py
courses/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
events/: admin.py  models.py  serializers.py  urls.py  views.py
followers/: consumers.py  views.py
jobs/: models.py
logging/: apps.py  logger.py  urls.py
loggings/: apps.py  urls.py
logs/: app.log.json
messaging/: signals.py
notifications/: admin.py  consumers.py  forms.py  managers.py  metrics.py  models.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
profiles/: consumers.py  models.py  serializers.py  signals.py  urls.py  views.py
project/: asgi.py  celery.py  routing.py  settings.py  urls.py  wsgi.py
querying/: apps.py  models.py
reports/: models.py
settings/: models.py
(+164 files in other folders)
