[tool.poetry]
name = "fas-lms"
version = "0.1.0"
description = "FAS LMS Project"
authors = ["Martin Lubowa <martinlubowa@outlook.com>"]
license = "MIT"
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Django = "==5.0.6"
channels = "==4.1.0"
channels-redis = "==4.2.0"
djangorestframework = "==3.15.1"
djangorestframework-simplejwt = "==5.3.1"
django-allauth = "==0.63.3"
django-celery-beat = "==2.6.0"
django-ckeditor = "==6.7.1"
django-cors-headers = "==4.3.1"
django-crispy-forms = "==2.1"
django-encrypted-model-fields = "==0.6.5"
django-extensions = "==3.2.3"
django-prometheus = "==2.3.1"
django-redis = "==5.4.0"
django-rq = "==2.10.2"
django-taggit = "==5.0.1"
drf-yasg = "==1.21.7"
drf-spectacular = "==0.27.2"
drf-spectacular-sidecar = "==2024.7.1"
pillow = "==10.3.0"
psycopg2-binary = "==2.9.9"
redis = "==5.0.5"
celery = "==5.4.0"
prometheus-client = "==0.20.0"
rq = "==1.16.2"
shortuuid = "==1.0.13"
amqp = "==5.2.0"
pytz = "==2024.1"
newrelic = "==9.12.0"
PyJWT = "==1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-django = "^4.4"
pytest-cov = "^2.11"
pre-commit = "^2.13"
black = "^21.5"
flake8 = "^3.9"
isort = "^5.8"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["fas_lms_backend"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
